
    2.13.3: In progress...

     FIXED: Crash when waterfall height is set to 100%.


    2.13.2: Released October 24, 2020

       NEW: Preliminary support for GNU Radio 3.9.
       NEW: Print UDP configuration.
       NEW: Viridis color map.
     FIXED: Loss of precision in the plotter's frequency axis.
     FIXED: Usability on smaller screen sizes.


    2.13.1: Released October 17, 2020

     FIXED: Crash when invalid sample rate is specified.
     FIXED: Decrease minimum size of FFT Settings panel.
     FIXED: Typos.
  IMPROVED: More Airspy HF+ sample rates added.


      2.13: Released October 16, 2020

       NEW: Stereo option for UDP streaming.
       NEW: Script to generate AppImage.
       NEW: Allow scroll wheel direction to be inverted.
     FIXED: FM de-emphasis causing audio to be 20 dB quieter than it should be.
     FIXED: FM de-emphasis applied incorrectly in WFM stereo receiver.
     FIXED: Update waterfall time resolution when FFT settings are changed.
     FIXED: Update waterfall time resolution when window is resized.
     FIXED: Restore waterfall time span between sessions.
     FIXED: FFT buffer overlap calculation.
     FIXED: Crash when launching without device connected.
     FIXED: Crash when setting invalid RF gains.
     FIXED: Audio panadapter / waterfall slider direction.
     FIXED: Clear FFT averages when changing FFT size.
     FIXED: Crash when source block doesn't support IQ balancing.
     FIXED: Bookmark labels in FFT draw over each other.
  IMPROVED: DSP and FFT performance.
  IMPROVED: Panadapter & waterfall performance.
  IMPROVED: Smooth panadapter & waterfall redrawing.
  IMPROVED: Better default values for various settings.
  IMPROVED: Audio waterfall colormap matches I/Q waterfall.
  IMPROVED: Use all available display space for panadapter & waterfall.
  IMPROVED: Updated RDS decoder.
  IMPROVED: More Airspy HF+ sample rates added.


    2.12.1: Released January 27, 2020
