@@ -2,6 +2,7 @@
     2.13.3: In progress...
 
      FIXED: Crash when waterfall height is set to 100%.
+  IMPROVED: Remove Boost.Program_options dependency.
 
 
     2.13.2: Released October 24, 2020
